# SurvivorCat

./: .tauriignore  INSTALL.md  MACOS_INSTALL_GUIDE.md  QUICK_FIX.md  README.md  RELEASE_CHECKLIST.md  SAVE_FILE_LOCATION.md  SAVE_SYSTEM_UPDATE.md  TAURI_BUILD.md  WINDOWS_BUILD.md  build-release.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  start-tauri.sh  tsconfig.json  vite.config.js
.github/workflows/: main.yml  release.yml
public/assets/Slub/: Slub.pxm
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/config/: AffixConfig.ts  DifficultyConfig.ts  EnemyConfig.ts  EquipmentConfig.ts  MapDecorationConfig.ts  SkillConfig.ts
src/scenes/: GameScene.ts  InventoryScene.ts  LoadingScene.ts  MenuScene.ts  SafeHouseScene.ts  TestScene.ts
src/systems/: EnemyManager.ts  EquipmentDetailRenderer.ts  EquipmentManager.ts  ExplosionSystem.ts  GameUISystem.ts  MapManager.ts  PauseUISystem.ts  PlayerSystem.ts  PoisonSystem.ts  SaveManager.ts  SkillManager.ts
